src/objects/IAD_Config__mdt.object
<CustomObject>
    <fields>
        <fullName>Contact_Highlights_Panel_Hours_Threshold__c</fullName>
        <label>Contact Highlights Panel Hours Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Log_Interaction_Days_Threshold__c</fullName>
        <label>Log Interaction Days Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Gateway__c</fullName>
        <label>Payment Gateway</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Source__c</fullName>
        <label>Payment Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>IAD Config</label>
    <pluralLabel>IAD Config</pluralLabel>
</CustomObject>